# CacheLib

./: .gitignore  .gitmodules  Dockerfile  build.sh  docker-entrypoint.py  holpaca_overhead_profiler.py  plot_slab_release_durations.py  simple_test.json  utils.sh  zipf_sim.py
.github/workflows/: build-cachelib-ubuntu-24.yml
YCSB-cpp/: CMakeLists.txt  Makefile  build_with_cachelib.sh  plot-use-case-1.py  plot-use-cases.py  run.py  run_with_cachelib.sh
YCSB-cpp/cachelib/: cachelib.cc  cachelib.h  cachelib_db.cc  cachelib_db.h
YCSB-cpp/core/: basic_db.cc  basic_db.h  client.h  core_workload.cc  core_workload.h  countdown_latch.h  db.h  db_wrapper.h  terminator_thread.h  ycsbc.cc
YCSB-cpp/profiling_results/: report.txt
YCSB-cpp/profiling_results_200mb_1k_new/: report.txt
YCSB-cpp/profiling_results_300mb_1k/: report.txt
YCSB-cpp/rocksdb/: rocksdb_db.cc
YCSB-cpp/workloads/: workloadd  workloade
build-holpaca/: CMakeCache.txt  Makefile  cmake_install.cmake  holpaca-config.cmake  install_manifest.txt
cachelib/: CMakeLists.txt
cachelib/allocator/: CMakeLists.txt  Cache.cpp  Cache.h  CacheAllocator-inl.h  CacheAllocator.h  CacheAllocatorConfig.h  MarginalHitsOptimizeStrategy.cpp  MarginalHitsOptimizeStrategy.h  PoolRebalancer.cpp  PoolRebalancer.h  PoolResizer.cpp  PoolResizer.h  Tracker.h
cachelib/allocator/memory/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryPool.cpp  MemoryPool.h  MemoryPoolManager.cpp  MemoryPoolManager.h
cachelib/allocator/tests/: CacheBaseTest.cpp
cachelib/cachebench/: main.cpp
cachelib/cachebench/cache/: Cache-inl.h  Cache.h
cachelib/cachebench/util/: CacheConfig.cpp  CacheConfig.h
cachelib/cachelib_holpaca/: CMakeLists.txt  CacheLibHolpaca.cc  CacheLibHolpaca.h  PoolCache.cc  PoolCache.h  PoolCacheProxy.cc  PoolCacheProxy.h  PoolStage.cc  RunPoolCaches.cc
cachelib/cachelib_holpaca/test/: RunCaches.cc  SendQueries.cc
cachelib/cmake/: cachelib-config.cmake.in
cachelib/holpaca/: CMakeLists.txt  Cache.h
cachelib/holpaca/control-plane/: CMakeLists.txt  CacheProxy.cpp  CacheProxy.h  Controller.cpp  Controller.h  ControllerConfig.h  Main.cpp  ProxyManager.cpp  ProxyManager.h
cachelib/holpaca/control-plane/algorithms/: ControlAlgorithm.h  HitRatioMaximization.h  Spline.h
cachelib/holpaca/data-plane/: CMakeLists.txt  CacheAllocator.cpp  CacheAllocator.h  CacheAllocatorConfig.h  Stage.cpp  Stage.h
cachelib/holpaca/protos/: Holpaca.proto
contrib/: build-package.sh  build.sh  prerequisites-ubuntu24.sh
examples/simple_cache/: main.cpp
opt/cachelib/include/alpaca/: controller.h  data_plane_stage.h  general.h
opt/cachelib/include/alpaca/data_plane_stage/: cache_interface.h  substage.h
opt/cachelib/include/alpaca/data_plane_stage/substage/: monitor.h  tuner.h
opt/cachelib/include/alpaca/data_plane_stage/substage/monitor/: snapshot.h
thesis/: CMakeLists.txt  build.sh  constants.hpp  log.txt  main.cpp
thesis/control_plane/: controller.cpp
